--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="interface">
             <div class="logo">
                 <a href="@">
-                    <img src="@" alt="LOGO">
+                    <img src="logo_sem_fundo.png" alt="LOGO">
                 </a>
             </div> <!--logo-->
             
